[package]
name = "oxide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = { version = "0.37.3", default-features = false, features = ["linked", "debug"] }
ash-window = "0.12.0"
imgui = {version = "0.11.0", features = ["docking"]}
imgui-rs-vulkan-renderer = "1.9.0"
imgui-winit-support = "0.11.0"
once_cell = "1.18.0"
raw-window-handle = "0.5.2"
softbuffer = "0.3.0"
winit = "0.27"

